2023-09-03  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: with --pages, if one of the external files had warnings
        but the main file did not, the warning was previously not taken
        into consideration when determining the exit status.

        * Put quotation marks around the command in completion output to
        better handle spaces in paths. It is not a perfect fix (ideally,
        full shell-compatible quoting should be used), but it handles more
        cases than the old code and should handle all reasonable cases of
        qpdf being in a directory with a space in its name, which is
        common in Windows. Fixes #1021.

        * Move check for random number device to runtime instead of
        compile time. Since, by default, the crypto provider provides
        random numbers, runtime determinination of a random number device
        is usually not needed. Fixes #1022.

2023-09-02  Jay Berkenbilt  <ejb@ql.org>

        * Maintain links to foreign pages when copying foreign objects.
        This allows hyperlinks in imported files to work. Fixes #1003.

        * Bug fix: Return a null object if an attempt is made to to copy a
        foreign /Pages object with copyForeignObject. This corrects a
        possible crash. Fixes #1010.

        * Bug fix: Return a null object if an attempt is made to to copy a
        foreign /Pages object with copyForeignObject. Fixes #1003.

        * Add /MediaBox to a page if absent. Thanks M. Holger.

        * Use std::vector internally for Pl_Buffer to
        avoid incompatibility with C++20. Thanks to Zoe Clifford. Fixes #1024.

2023-07-09  Jay Berkenbilt  <ejb@ql.org>

        * 11.5.0: release

        * This release consists entirely of changes made by M. Holger.
        Mostly this is changes to the private API, performance
        enhancements, code cleanup, and reformatting to 100 columns
        instead of 80. For qpdf development, we are starting to use